# tasktastic

./: .gitignore
backend/: manage.py  pyproject.toml
backend/tasktastic/: api.py  asgi.py  conftest.py  settings.py  urls.py  wsgi.py
backend/tasktastic/task/: apps.py  controllers.py  models.py
backend/tasktastic/task/migrations/: 0001_initial.py  0002_initial.py
backend/tasktastic/task/tests/: test_tasks.py
backend/tasktastic/user/: apps.py  controllers.py  models.py
backend/tasktastic/user/migrations/: 0001_initial.py
backend/tasktastic/user/tests/: factories.py  test_users.py
