[project]
name = "backend"
version = "0.1.0"
description = "Backend for Task Management Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-ninja>=1.4.5",
    "django-ninja-extra>=0.30.2",
    "django-ninja-jwt>=5.4.0",
    "dotenv>=0.9.9",
    "pytest>=8.4.2",
]
